--- a/estudo/tabela.html
+++ b/estudo/tabela.html
@@ -26,7 +26,7 @@
         <caption>População das Unidades Federativas</caption>
 
         <thead>
-            <!-- scope row na tag th é obrigatório, visivelmente ele não vai aprsentar nada, mais é fundamental tê-lo -->
+            <!-- scope col na tag th é obrigatório, visivelmente ele não vai apresentar nada, mais é fundamental tê-lo -->
             <tr>
                 <th scope="col">Estado</th>
                 <th scope="col"   style="width: 50px;">População</th>
