--- a/estudo/estudo01.html
+++ b/estudo/estudo01.html
@@ -3,34 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="./css-estudo/estudo01.css">
-    <title>Estudo</title>
+
+    <title> Tabelas</title>
 </head>
 <body>
-    <h1> Mesclando Células</h1>
+ <h1>tabelas</h1>
     <table>
         <tr>
             <td>A</td>
-            <td colspan="2">B</td>
-            <!-- <td>C</td> -->
-        </tr>
-        <tr>
-            <td rowspan="3">D</td>
-            <td>E</td>
-            <td>F</td>
-        </tr>
-        <tr>
-            <!-- <td>G</td> -->
-            <td>h</td>
-            <td>I</td> 
-        </tr>
-        <tr>
-            <!-- <td>J</td> -->
-            <td>L</td>
-            <td>M</td>
+            <td>B</td>
         </tr>
     </table>
-    
+
 </body>
 </html>
