--- a/estudo/estudo01.html
+++ b/estudo/estudo01.html
@@ -11,10 +11,35 @@
  <h1>tabelas</h1>
     <table>
         <tr>
-            <td>A</td>
-            <td>B</td>
+            <td colspan="4">A</td>
+            <td rowspan="4">B</td>
+            <!-- <td>3</td>
+            <td>4</td> -->
+        </tr>
+        <tr>
+            <td rowspan="5">C</td>
+            <td>D</td>
+            <td>E</td>
+            <td>F</td>
+        </tr>
+        <tr>
+            <td>G</td>
+            <td>G</td>
+            <td>I</td>
+            <!-- <td>12</td> -->
+        </tr>
+
+        <tr>
+            <td>J</td>
+            <td>L</td>
+            <td>M</td>
+            <!-- <td>16</td> -->
+        </tr>
+        <tr>
+            <td colspan="4">N</td>
+            
         </tr>
     </table>
-
+   
 </body>
 </html>
