--- a/estudo/estudo01.html
+++ b/estudo/estudo01.html
@@ -10,35 +10,68 @@
 <body>
  <h1>tabelas</h1>
     <table>
-        <tr>
-            <td colspan="4">A</td>
-            <td rowspan="4">B</td>
-            <!-- <td>3</td>
-            <td>4</td> -->
-        </tr>
-        <tr>
-            <td rowspan="5">C</td>
-            <td>D</td>
-            <td>E</td>
-            <td>F</td>
-        </tr>
-        <tr>
-            <td>G</td>
-            <td>G</td>
-            <td>I</td>
-            <!-- <td>12</td> -->
-        </tr>
+        <caption>
+            Filmes Favoritos
+        </caption>
+        <thead>
+            <th>Grupo</th>
+            <th>Nomes</th>
+            <th colspan="3">Filmes</th>
+        </thead>
+        <tbody>
+            <tr>
+                <th rowspan="4">Mulheres</th>
+                <td>Julia Maria</td>
+                <td>A Busca</td>
+                <td>Foroeste</td>
+                <td>Os meninos</td>
+            </tr>
+            <tr>
+                <td>Helena</td>
+                <td> Cavalos</td>
+                <td> O Mar</td>
+                <td> a neve</td>
+            </tr>
+            <tr>
+                <td>Márcia</td>
+                <td>Vento e chuva</td>
+                <td> A brisa</td>
+                <td> Pantanal</td>
+            </tr>
+            <tr>
+                <td>Hérica</td>
+                <td>Goiás</td>
+                <td>Brasília</td>
+                <td>Goiânia</td>
+            </tr>
 
-        <tr>
-            <td>J</td>
-            <td>L</td>
-            <td>M</td>
-            <!-- <td>16</td> -->
-        </tr>
-        <tr>
-            <td colspan="4">N</td>
-            
-        </tr>
+            <tr>
+                <th rowspan="4">Homens</th>
+                 <td>Paulo</td>
+                 <td>Abacate</td>
+                 <td>Limão</td>
+                 <td>Melão</td>
+            </tr>
+            <tr>
+                <td>Pedro</td>
+                <td>Banana</td>
+                <td>Abacaxi</td>
+                <td>Melância</td>
+            </tr>
+            <tr>
+                <td>Henrique</td>
+                <td>Pernambuco</td>
+                <td>Sergipe</td>
+                <td>Bahia</td>
+            </tr>
+            <tr>
+                <td>Isac</td>
+                <td>Amazonas</td>
+                <td>Rondônia</td>
+                <td> Acre</td>
+            </tr>
+
+        </tbody>
     </table>
    
 </body>
