--- a/estudo/tabela05.html
+++ b/estudo/tabela05.html
@@ -16,7 +16,7 @@
      <thead>
          
          <tr>
-             <th>Produtos</th>
+             <th>Produto</th>
              <th>Jan</th>
              <th>Fev</th>
              <th>Mar</th>
@@ -31,7 +31,9 @@
              <th>Dez</th>
          </tr>
      </thead>
-     <tbody></tbody>
+     <tbody>
+        
+     </tbody>
 
     </table>
 
