--- a/estudo/estudo01.html
+++ b/estudo/estudo01.html
@@ -46,7 +46,7 @@
             </tr>
 
             <tr>
-                <th rowspan="4">Homens</th>
+                <th rowspan="4" scope="rowgroup ">Homens</th>
                  <td>Paulo</td>
                  <td>Abacate</td>
                  <td>Limão</td>
