--- a/estudo/estudo01.html
+++ b/estudo/estudo01.html
@@ -5,74 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css-estudo/estudo01.css">
 
-    <title> Tabelas</title>
+    <title> Tabelas Estudo</title>
 </head>
 <body>
- <h1>tabelas</h1>
-    <table>
-        <caption>
-            Filmes Favoritos
-        </caption>
-        <thead>
-            <th>Grupo</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
-        </thead>
-        <tbody>
-            <tr>
-                <th rowspan="4">Mulheres</th>
-                <td>Julia Maria</td>
-                <td>A Busca</td>
-                <td>Foroeste</td>
-                <td>Os meninos</td>
-            </tr>
-            <tr>
-                <td>Helena</td>
-                <td> Cavalos</td>
-                <td> O Mar</td>
-                <td> a neve</td>
-            </tr>
-            <tr>
-                <td>Márcia</td>
-                <td>Vento e chuva</td>
-                <td> A brisa</td>
-                <td> Pantanal</td>
-            </tr>
-            <tr>
-                <td>Hérica</td>
-                <td>Goiás</td>
-                <td>Brasília</td>
-                <td>Goiânia</td>
-            </tr>
+ <h1>Tabelas estudo</h1>
+ <table>
+    <caption>
+        Média Escolar
+    </caption>
+    <thead>
+        <tr>
+            <th rowspan="2">Área</th>
+            <th rowspan="2">Disciplina</th>
+            <th colspan="2">Notas</th>
+            <th rowspan="2">Média</th>
 
             <tr>
-                <th rowspan="4" scope="rowgroup ">Homens</th>
-                 <td>Paulo</td>
-                 <td>Abacate</td>
-                 <td>Limão</td>
-                 <td>Melão</td>
+                <th>Nota 1</th>
+                <th>Nota 2</th>
             </tr>
-            <tr>
-                <td>Pedro</td>
-                <td>Banana</td>
-                <td>Abacaxi</td>
-                <td>Melância</td>
-            </tr>
-            <tr>
-                <td>Henrique</td>
-                <td>Pernambuco</td>
-                <td>Sergipe</td>
-                <td>Bahia</td>
-            </tr>
-            <tr>
-                <td>Isac</td>
-                <td>Amazonas</td>
-                <td>Rondônia</td>
-                <td> Acre</td>
-            </tr>
+        </tr>
+    </thead>
 
-        </tbody>
-    </table>
+
+    <tbody>
+        <tr>
+            <th rowspan="4">Exatas</th>
+            <td>Matemática</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+        <tr>
+            <td>Física</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+
+        </tr>
+        <tr>
+            <td>Química</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+        <tr>
+            <td>Biologia</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+        <tr class="media">
+            <th colspan="4">Média de Exatas</th>
+            <td>0.0</td>
+        </tr>
+        <tr>
+            <th rowspan="2">Humanas</th>
+            <td>História</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+        <tr>
+            <td>Geografia</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+
+        <tr class="media">
+            <th colspan="4">Média de Humanas</th>
+            <td>0.0</td>
+        </tr>
+
+
+
+    </tbody>
+
+
+
+
+
+ </table>
    
 </body>
 </html>
