--- a/estudo/estudo01.html
+++ b/estudo/estudo01.html
@@ -8,85 +8,148 @@
     <title> Tabelas Estudo</title>
 </head>
 <body>
- <h1>Tabelas estudo</h1>
+    <h1>Tabelas grande</h1>
+       
  <table>
     <caption>
-        Média Escolar
+        População das Unidades Federativas
     </caption>
     <thead>
-        <tr>
-            <th rowspan="2">Área</th>
-            <th rowspan="2">Disciplina</th>
-            <th colspan="2">Notas</th>
-            <th rowspan="2">Média</th>
-
-            <tr>
-                <th>Nota 1</th>
-                <th>Nota 2</th>
-            </tr>
+        <tr class="alinhar"> 
+            <th scope="col"> Estado</th>
+            <th scope="col" style="width: 60px;">População</th>
         </tr>
+
     </thead>
 
+<tbody>
+    <tr>
+        <td>São Paulo</td>
+        <td class="numero">45 919 049</td>
+    </tr>
+    <tr>
+        <td>Minas Gerais</td>
+        <td class="numero">21 168 791</td>
+    </tr>
+    <tr>
+        <td>Rio de Janeiro</td>
+        <td class="numero">17 264 943</td>
+    </tr>
+    <tr>
+        <td>Bahia</td>
+        <td class="numero">14 873 064</td>
+    </tr>
+    <tr>
+        <td>Paraná</td>
+        <td class="numero">11 433 957</td>
+    </tr>
+    <tr>
+        <td>Rio Grande do Sul</td>
+        <td class="numero">11 377 239</td>
+    </tr>
+    <tr>
+        <td>Pernambuco</td>
+        <td class="numero">9 557 071</td>
+    </tr>
+    <tr>
+        <td>Ceará</td>
+        <td class="numero" >9 132 078</td>
+    </tr>
+    <tr>
+        <td>Pará</td>
+        <td class="numero">8 602 865</td>
+    </tr>
+    <tr>
+        <td>Santa Catarina</td>
+        <td class="numero">7 164 788</td>
+    </tr>
+    <tr>
+        <td>Maranhão</td>
+        <td class="numero">7 075 181</td>
+    </tr>
+    <tr>
+        <td>Goiás</td>
+        <td class="numero">7 018 354</td>
+    </tr>
+    <tr>
+        <td>Amazonas</td>
+        <td class="numero">4 144 597</td>
+    </tr>
+    <tr>
+        <td>Espírito Santo</td>
+        <td class="numero">4 018 650</td>
+    </tr>
+    <tr>
+        <td>Paraíba</td>
+        <td class="numero">4 081 127</td>
+    </tr>
+    <tr>
+        <td>Rio Grande do Norte</td>
+        <td class="numero">3 506 853</td>
+    </tr>
+    <tr>
+            <td> Mato Grosso</td>
+            <td class="numero">3 484 466</td>
+    </tr>
+    <tr>
+        <td>Alagoas</td>
+        <td class="numero">3 337 357</td>
+    </tr>
+    <tr>
+        <td>Piauí</td>
+        <td class="numero">3 273 227</td>
+    </tr>
+    <tr>
+        <td>Distrito Federal</td>
+        <td class="numero">3 015 268</td>
+    </tr>
+    <tr>
+        <td>Mato Grosso do Sul</td>
+        <td class="numero">2 778 986</td>
+    </tr>
+    <tr>
+        <td> Sergipe</td>
+        <td class="numero">2 298 696</td>
+    </tr>
+    <tr>
+        <td>Rodônia</td>
+        <td class="numero">1 777 225</td>
+    </tr>
+    <tr>
+        <td> Tocantins</td>
+        <td class="numero">1 572 866</td>
+    </tr>
+    <tr>
+        <td>Acre</td>
+        <td class="numero">881 935</td>
+    </tr>
+    <tr>
+        <td>Amapá</td>
+        <td class="numero">845 731</td>
+    </tr>
+    <tr>
+        <td>Roraima</td>
+        <td class="numero">605 761</td>
+    </tr>
 
-    <tbody>
-        <tr>
-            <th rowspan="4">Exatas</th>
-            <td>Matemática</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
-        </tr>
-        <tr>
-            <td>Física</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
-
-        </tr>
-        <tr>
-            <td>Química</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
-        </tr>
-        <tr>
-            <td>Biologia</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
-        </tr>
-        <tr class="media">
-            <th colspan="4">Média de Exatas</th>
-            <td>0.0</td>
-        </tr>
-        <tr>
-            <th rowspan="2">Humanas</th>
-            <td>História</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
-        </tr>
-        <tr>
-            <td>Geografia</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>0.0</td>
-        </tr>
-
-        <tr class="media">
-            <th colspan="4">Média de Humanas</th>
-            <td>0.0</td>
-        </tr>
 
 
 
-    </tbody>
+</tbody>
 
+ <tfoot>
+    <tr class="alinhar">
+        <th>Total de Habitantes</th>
+        <td><strong>210 147 125</strong></td>
+    </tr>
 
-
-
+ </tfoot>
 
  </table>
-   
+    
+
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque consequatur minima quia cumque delectus odio, sit eligendi obcaecati, blanditiis nihil, repellat reprehenderit in dolorem mollitia enim aliquid magnam neque?</p>
+    <p>Ipsa deleniti perferendis repudiandae quidem saepe vero iure praesentium iste consequuntur ipsum velit nesciunt, veritatis officiis minus sequi quod. Eaque nihil commodi hic excepturi quo, labore culpa quidem consectetur accusantium?</p>
+    <p>Fugit, asperiores quisquam. Minima id recusandae et optio deserunt beatae itaque quas labore a quisquam, fugit magni voluptas porro sit soluta velit corrupti accusamus veritatis, necessitatibus repellendus atque! Saepe, officiis!</p>
 </body>
 </html>
