--- a/pasta_mae/siteGuanabara.html
+++ b/pasta_mae/siteGuanabara.html
@@ -89,6 +89,8 @@
                 1° coloque o iframe  dentro de uma div;
                 crie uma clsse na div
             -->
+
+            <!-- Pega o vídeo no YuoTube, compartilha e incorporar e pega o códifo do iframe  e cola no html-->
             
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=DBQvlb52k3l1B8pp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
