--- a/pasta_mae/formulario.html
+++ b/pasta_mae/formulario.html
@@ -78,6 +78,8 @@
 
         <!--campo enviar formulário-->
         <input type="submit" value="Enviar Formulário">
+        
+        <input type="reset" value=" Limpar">
 
         
 
