--- a/media-query02/index.html
+++ b/media-query02/index.html
@@ -6,12 +6,12 @@
 <!-- serve para todos os dispostivos, Geral -->
     <link rel="stylesheet" href="./css/geral.css" media="all">
 
-<!-- dispositivo  em pé, retrato -->
-    <link rel="stylesheet" href="./css/retrato.css" media="screen and(orientation:portrait)">
+<!-- dispositivo  em pé, retrato, (o and tem que ter um espaço) -->
+    <link rel="stylesheet" href="./css/retrato.css" media="screen and (orientation:portrait)">
 <!-- Media Features fica entre parênteses: and(orientation:portrait) -->
 
-<!-- dispositivo deitado, paisagem-->
-    <link rel="stylesheet" href="./css/paisagem.css" media="screen and(orientation:landscape)">
+<!-- dispositivo deitado, paisagem (o and tem que ter um espaço)-->
+    <link rel="stylesheet" href="./css/paisagem.css" media="screen and (orientation:landscape)">
 <!-- Media Features fica entre parênteses: and(orientation:landscape) -->
 
 
