--- a/media-query04/index.html
+++ b/media-query04/index.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- all todo tipo de mídia -->
-    <link rel="stylesheet" href="./css/todos.css" media="all">
+    <link rel="stylesheet" href="./css/mobile.css" media="all">
 
     <!-- sem apontar mídia -->
     <link rel="stylesheet" href="./css/media-query.css">
 
     <title>Media Query, Mobile First </title>
 </head>
-
-
 
 
 <body>
