--- a/media-query05/index.html
+++ b/media-query05/index.html
@@ -8,11 +8,12 @@
     <!-- Pego do google icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+    <link rel="stylesheet" href="./css/media-query.css">
 
     <title>Media Query</title>
 </head>
-
-<body>
+<!-- javascript -->
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <!-- Pego do google icons -->
@@ -48,7 +49,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, magnam quidem voluptatum omnis ipsa nisi veritatis iste iure vero autem libero! Fugiat eum delectus quod. Quasi sed voluptatibus nisi in.</p>
             <p>Quia obcaecati consectetur vero unde repellendus repudiandae reprehenderit et aut eaque doloribus sunt, culpa suscipit esse exercitationem quibusdam magni ullam recusandae saepe ratione. Tempore numquam quam atque recusandae libero quaerat.</p>
             <p>Facilis tenetur iure ipsum amet! Vero soluta eos temporibus debitis voluptatibus dolorem culpa deleniti deserunt, natus eaque praesentium pariatur, itaque dignissimos delectus ut corporis in veritatis cumque a autem? Dignissimos!</p>
-            
+
             <p>Molestiae, vel quas culpa dignissimos neque pariatur architecto ad voluptatem! Consectetur reiciendis nesciunt totam, praesentium repellendus aliquam, modi ipsum nisi ex ducimus magnam, autem accusantium architecto. Nobis quod ipsa accusamus.</p>
         </article>
     </main>
@@ -63,6 +64,17 @@
                 menu.style.display='block'
 
            }
+        }
+
+        function mudouTamanho(){
+            if(window.innerWidth >= 768){
+                menu.style.display='block'
+
+            }
+            else {
+                menu.style.display='none'
+            }
+
         }
 
     </script>
